Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -15,6 +15,17 @@ author = {Glennys R. Farrar},
 keywords = {UHECR, Galactic magnetic field, Magnetic deflections, RCUHE, Champs magnétique galactique, Déflexions magnétiques},
 abstract = {Our understanding of the Galactic magnetic field (GMF) has increased considerably in recent years, while at the same time remaining far from adequate. By way of illustration, the Jansson and Farrar (2012) (JF12) GMF model is described, emphasizing how it is constrained and which features are robust or likely to change, as modeling and constraining data improve. The most urgent requirements for the next phase of modeling are a more realistic model for the relativistic electron distribution (in order to reduce the systematic error associated with interpreting synchrotron data) and a better theoretical understanding of the origin of the large-scale coherent field (in order to develop a better phenomenological parameterization of the field). Even in its current stage of development, the JF12 model allows some important conclusions about UHECR deflections in the GMF to be formulated.}
 }
+%% Auger_ICRC_2021
+@article{ Auger_ICRC_2021,
+    author = "Abreu, Pedro and others",
+    collaboration = "Pierre Auger",
+    title = "{The ultra-high-energy cosmic-ray sky above 32 EeV viewed from the Pierre Auger Observatory}",
+    doi = "10.22323/1.395.0307",
+    journal = "PoS",
+    volume = "ICRC2021",
+    pages = "307",
+    year = "2021"
+}
 
 %% ICRC 2021
 @inproceedings{ICRC_2021,
