--- a/main.tex
+++ b/main.tex
@@ -108,7 +108,7 @@ B_{\rm{tor}} = B_{\rm{str}} {\rm{e}}^{(-|z|/Z_{\rm{mag}})} {\rm{e}}^{(-z_{\rm{mi
 The structured field has 3 free parameters: $B_{\rm str}$ as the strength of the magnetic field and $R_{\rm {mag}}$ and $Z_{\rm {mag}}$ describing the radial and azimuthal cut off distances, respectively. The value of , $z_{\rm min}$ = 100~pc which dictates the cut in the Galactic plane is fixed. The model spans radially up to 20~kpc with the observer being centered at Earth, (-8.5,0,0)~kpc. The direction of the toroidal field is orientated in opposite directions above and below the Galactic plane. A visualisation of our magnetic field in \textit{xy} and \textit{xz} cross-sections is shown in Fig.~\ref{fig:Vis_TM}. 
 
 We use CRPropa~3 (\cite{CRPropa3_2016}) for generating turbulent fields with a power law spectrum, with the magnitude of this component being $B_{\rm{tur}}$. 
-The minimum and maximum values of wavelength to generate these fields are  $L_{\rm min}$ = 200~pc and $L_{\rm max}$ = 400~pc. For computational reasons we stick to this restricted dynamic range of $L_{\rm min}$ and $L_{\rm max}$. The turbulent field has effectively only 1 free parameter which is the magnitude of the turbulent field strength, $ B_{\rm tur}$, with the coherence length of the field being kept fixed at 150~pc. This value of $L_{\rm coh}$, although in the range of values considered (\cite{Ohno_1993, Chepurnov_2010, Haverkorn_2013, Giacinti_2018}), nevertheless may be too large. Regardless, for the sake of simplicity, we fix the coherence length at this length scale. In Appendix~\ref{Appendix_B} we show a power-spectrum plot for this turbulent magnetic field description.
+The minimum and maximum values of wavelength to generate these fields are  $L_{\rm min}$ = 200~pc and $L_{\rm max}$ = 400~pc. For computational reasons we stick to this restricted dynamic range of $L_{\rm min}$ and $L_{\rm max}$. The turbulent field has effectively only 1 free parameter which is the magnitude of the turbulent field strength, $ B_{\rm tur}$, with the coherence length of the field being kept fixed at 150~pc. This value of $L_{\rm coh}$, although in the range of values considered (\cite{Ohno_1993, Chepurnov_2010, Haverkorn_2013, Giacinti_2018}), nevertheless may be too large. Regardless, for the sake of simplicity, we fix the coherence length at this length scale. In Appendix~\ref{Appendix_B} we show a power-spectrum plot for the turbulent magnetic field realisation adopted.
 
 Since we focus only on the Galactic regions of the sky which probe the Galactic halo, we do not include any disk magnetic field component in this model. For the purposes of comparison, we use the JF12 model as a comparative reference since it is a widely known Galactic magnetic field model.
 However, it should be noted that the JF12 model was motivated by observations which masked out a large part of the Galactic bubble region that we focus on, and adopts magnetic fields strengths and spatial extensions both weaker and smaller than those suggested by the S-PASS observations \citep{Carretti_2013} in these regions.
@@ -144,33 +144,37 @@ It should be noted that in our description of the halo, it is assumed that both 
 
 \subsubsection{Intensity \& polarisation}
 Synchrotron radiation or magneto-bremsstrahlung radiation is the radiation produced due to charged particles that gyrate at relativistic speeds around a static magnetic field. Synchrotron radiation is sensitive to $B_{\perp}$, the magnetic field component perpendicular to the line of sight. The radiation produced via synchrotron is often linearly polarised.
-The polarised emissivity (emission per unit volume) can be visualised as an ellipse where the major axis is the perpendicular component ($J_{\rm \perp}$) and the minor axis is the parallel ($J_{\parallel}$) component (see Appendix~\ref{Appendix_A} for further discussion). 
-The two polarisation emission components, $J_{\perp}$ and $J_{\parallel}$, describe the emission level for a given peak photon energy $E_{\gamma}^{\mathrm{peak}}$.
-Expressions for these two components are provided below in Eqs.~\ref{Jperp} and \ref{Jpara},
+The polarised emissivity (emission per unit volume) spectral distribution can be visualised as an ellipse where the major axis is the perpendicular component ($J_{\rm \perp}$) and the minor axis is the parallel ($J_{\parallel}$) component (see Appendix~\ref{Appendix_A} for further discussion). 
+The two polarisation emission components, $J_{\perp}$ and $J_{\parallel}$, describe the emission spectrum for a given peak photon energy $E_{\gamma}^{\mathrm{peak}}$.
+Expressions for these two components averaged over an isotropic distribution of pitch angles of electrons are provided below in Eqs.~\ref{Jperp} and \ref{Jpara},
 
 \begin{equation}
  {J_{\perp}^l} = \frac{1}{\tau}  \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \  \frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) + G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] \
  \label{Jperp}
 \end{equation}
 
-
-and
+\noindent and
 
 \begin{equation}
 {J_{\parallel}^l} = \frac{1}{\tau} \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \ \frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) - G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] 
 \label{Jpara}
 \end{equation}
 
-where
+\noindent where
 \begin{align}
-\tau^{-1} &= \frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}c^{2}}{h} \frac{8\pi \alpha}{9},
-\\
-E_{\gamma}^{\mathrm{peak}} &= \Gamma^2 \frac{B_{\perp}}{B_{\mathrm{crit}}} m_{e} c^2,\\
-F(x) &= x \int_x^\infty K_{5/3}(x') dx',\\
+\tau^{-1} &= \frac{4 \alpha}{9}\frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}c^{2}}{\hbar},
+ & 
+E_{\gamma}^{\mathrm{peak}} &= \Gamma^2 \frac{B_{\perp}}{B_{\mathrm{crit}}} m_{e} c^2,
+\nonumber
+\end{align}
+and
+\begin{align}
+F(x) &= x \int_x^\infty K_{5/3}(x') dx', &
 G(x) &= x K_{2/3}.
+\nonumber
 \end{align}
 
-These expressions are provided in terms of the critical magnetic field strength, $B_{\mathrm{crit}} = \frac{m_e^2c^3}{e\hbar} = 4.414 \times 10^{13}$~G, where $m_e = 0.511$~MeV is the mass of electron, $h = 4.136 \times 10^{-15}$~eV~s is Planck's constant, $\Gamma$ is the Lorentz factor and $\alpha \approx \frac{1}{137.04}$ is the electromagnetic fine structure constant.
+These expressions are provided in terms of the critical magnetic field strength, $B_{\mathrm{crit}} = \frac{m_e^2c^3}{e\hbar} = 4.414 \times 10^{13}$~G, where $m_e c^{2} = 0.511$~MeV is the rest-mass energy of the electron, $h = 4.136 \times 10^{-15}$~eV~s is Planck's constant, $\Gamma$ is the Lorentz factor and $\alpha \approx \frac{1}{137.04}$ is the electromagnetic fine structure constant.
 
 
 For clarity, several of the conventions we adopted are noted here. The parallel component of polarisation (${J_{\parallel}}$) is orientated in the same direction as  $\vec{B_{\perp}}$, and the perpendicular component of polarisation (${J_{\perp}}$) is perpendicular to $\vec{B_{\perp}}$. The Stokes parameters at each point along the line of sight can be written in terms of the intrinsic polarisation angle $\Psi^l_{\rm in}$ which is the angle between the line-of-sight perpendicular component of the magnetic field $B_{\perp}$ and Galactic south at each step. The conventions adopted here match those used by the Planck collaboration \citep{Planck_XIX} based on the $\rm HEALPix^3$~\footnote{\textcolor{purple}{https://healpix.jpl.nasa.gov/}} software by \cite{Healpix_2005}. For each step along the line of sight, both  ${J_{\perp}^l}$ and ${J_{\parallel}^l}$ are subsequently used to obtain the $Q$ and $U$ Stokes parameters. We obtain the values the intrinsic Stokes parameters $Q^{\rm tot}_{\rm in}$ and $U^{\rm tot}_{\rm in}$ by integrating over $Q$ and $U$ along the line of sight:
@@ -308,34 +312,37 @@ In figure~\ref{fig:AD_Plots} we show:
 
 \begin{enumerate}
     \item {\bf Left column: } the magnification maps in log(particles/str), obtained by backtracking an isotropic distribution of cosmic rays from Earth. These magnification maps are made for the best-fit values (\textbf{top}), a set of minimum values (\textbf{middle}) and a set of maximum values (\textbf{bottom}) for the magnetic field model parameter values.
-    To create these histograms we binned the cosmic ray distribution into angular bins on the escape surface, with 180 bins for both latitudes and longitudes. The histogram values in the maps are normalised to the histogram values obtained for simulations without any magnetic fields present (giving rise to uniform sky brightness). In each map the blue regions denote the areas of the sky where cosmic rays are suppressed and the red regions are the ones where the cosmic rays are enhanced.
+    To create these histograms we binned the cosmic ray distribution into angular bins (with respect to the Earth) on the escape surface, with 180 bins for both latitudes and longitudes. The histogram values in the maps are normalised to the histogram values obtained for simulations without any magnetic fields present (giving rise to uniform sky brightness). In each map the blue regions denote the areas of the sky where cosmic rays are suppressed and the red regions are the ones where the cosmic rays are enhanced.
     
     \item {\bf Right column: } skymaps for arrival directions
-    of cosmic rays from UHECRs candidate sources Cen~A and NGC~253. Similar to the above case of the magnification maps we backtrack cosmic rays starting from Earth until they reached an escape radius of 20~kpc from the Galactic centre. The cosmic ray arrival directions from a region of $5^{\circ}$ from the source are then binned.  Like the magnification maps, we normalise these maps to the peak value of the histogram densities in the source region for the case of no magnetic fields.  This gives us a normalised value of the number of hits obtained. Analogous to the magnification maps the \textbf{top}, \textbf{middle} and \textbf{bottom} plots denote the best-fit, minimum and maximum cases, respectively. 
+    of cosmic rays from UHECRs candidate sources Cen~A and NGC~253. Similar to the above case of the magnification maps we backtrack cosmic rays starting from Earth until they reached an escape radius of 20~kpc from the Galactic centre. The cosmic ray arrival directions from a region of $5^{\circ}$ from the source are then binned.  Like the magnification maps, we normalise these maps to the peak value of the histogram densities in the source region for the case of no magnetic fields.  This gives a normalised value of the number of hits ('Magn.') obtained. Analogous to the magnification maps the \textbf{top}, \textbf{middle} and \textbf{bottom} plots denote the 'Best-fit', 'Minimum' and 'Maximum' cases, respectively. 
     \end{enumerate}
 
-The UHECR deflections are sensitive to both structured and turbulent fields and therefore the 'Maximum' case has a larger region of suppression in comparison to the 'Best-fit' and 'Minimum' cases (see Table~\ref{Para_table}). This suppression and enhancement of UHECRs is also shown for two potential UHECR sources, Cen~A (lat = $\rm 19.42^{\circ}$, lon = $\rm -50.49^{\circ}$) and NGC~253 (lat = $\rm -87.96^{\circ}$, lon = $\rm 97.36^{\circ}$). Because of their positioning in the sky, both the sources lie in the suppression region in the 'Maximum' case. We also estimate the mean value of the spread (mean deflection angle) and the mean direction of cosmic rays after deflection. Below is a list of the mean deflection angle, ($\sigma_{\rm source}$), between the mean direction and the arrival directions of the cosmic rays:
+The deflections of UHECR in the Galactic magnetic field are sensitive to both the structured and turbulent field components of the field in different ways. One of the first effects worth noting is the {\bf suppression effect} for cosmic rays from certain regions of the sky. For the 'Maximum' toy model magnetic field model giving rise to the largest suppression factor level in the magnification map in comparison to the 'Best-fit' and 'Minimum' cases (see Table~\ref{Para_table}). These suppression and enhancement of UHECRs from different regions of the sky are also seen in the skymaps provided for two potential UHECR sources, namely Cen~A (lat = $\rm 19.42^{\circ}$, lon = $\rm -50.49^{\circ}$) and NGC~253 (lat = $\rm -87.96^{\circ}$, lon = $\rm 97.36^{\circ}$). Because of their positions in the sky, both of these sources lie in the suppression region of the magnification maps for both the 'Best-fit' and 'Maximum' cases. In particular, we note that for NGC~253, the 'Maximum' toy model case leads to a suppression level of $\approx 5\%$ of the level that would arrive for the no magnetic field case, and $\approx 40\%$ for Cen~A.
+
+A second effect introduced by the turbulent magnetic fields is the {\bf spreading effect} (mean deflection angle) of cosmic rays around their originating source direction. In order to quantify this effect, a list is provided below of the mean deflection angle, ($\sigma_{\rm source}$), between the mean direction and the arrival directions of the cosmic rays for the two candidate sources considered:
 \begin{itemize}
         \item Best fit - $\sigma_{\rm NGC~253} = 38^{\circ}$ , {$\sigma_{\rm Cen~A} = 38^{\circ}$}
         \item Minimum - $\sigma_{\rm NGC~253} = 27^{\circ}$ , $\sigma_{\rm Cen~A} = 30^{\circ}$
         \item Maximum - $\sigma_{\rm NGC~253} = 83^{\circ}$, $\sigma_{\rm Cen~A} = 69^{\circ}$
 \end{itemize}
-In comparison, the mean deflection angle for Cen~A and NGC~253 from the JF12 torroidal halo field (JF12 halo) \citep{JF12}  are  $\sigma_{\rm NGC~253} = 9^{\circ}$ , and {$\sigma_{\rm Cen~A} = 22^{\circ}$}. 
-Similarly, the mean source position (lat, lon) for the three cases and the JF12 halo are as follows:
+In comparison to the magnitude of these spreading angles, the mean deflection angle for Cen~A and NGC~253 from the JF12 torroidal halo field (JF12 halo) \citep{JF12}  are  $\sigma_{\rm NGC~253} = 9^{\circ}$ , and {$\sigma_{\rm Cen~A} = 22^{\circ}$}.  The spread of the cosmic rays obtained for our toy model are therefore potentially considerably larger (up to 5-10 times bigger) than those obtained for the JF12 toroidal halo. The primary driver of this difference is that our toy model possesses a larger level of turbulent magnetic fields than structured fields. 
+
+Additional to this spreading effect, the presence of a structured field component in the magnetic field model leads to the {\bf coherent deflection} of the mean direction of the ensemble of cosmic rays away from the source direction. Following the propagation of cosmic rays from the two candidate source NGC~253 and Cen~A, the mean source position (lat, lon) for the three cases are as follows:
 \begin{itemize}
     \item Best-fit - NGC~253: ($-72^{\circ}$,$2^{\circ}$) \& Cen~A: ($10^{\circ}$,$-45^{\circ}$) 
     \item Minimum - NGC~253: ($-78^{\circ}$,$9^{\circ}$) \& Cen~A: ($16^{\circ}$,$-39^{\circ}$) 
     \item Maximum - NGC~253: ($-19^{\circ}$,$41^{\circ}$) \& Cen~A: ($1^{\circ}$,$-53^{\circ}$) 
-    \item JF12 halo - NGC~253: ($-33^{\circ}$,$1^{\circ}$) \& Cen~A: ($-1^{\circ}$,$-47^{\circ}$) 
 \end{itemize}
+In comparison, the mean shift positions from the JF12 halo model for the two sources are are  NGC~253: ($-33^{\circ}$,$1^{\circ}$) \& Cen~A: ($-1^{\circ}$,$-47^{\circ}$).
 
-It can be seen that in the 'Maximum' case it is harder to associate the cosmic rays to a source in comparison to the 'Best-fit' or 'Minimum' cases. This is due to the fact that the structured fields are responsible for the overall direction of the particle deflections, whereas turbulent fields are responsible for spreading out the directions of the particle deflections around this overall deflected direction. For cases in which the turbulent magnetic field component dominates, and this field strength component is large, the source directions can be completely washed-out.
-This washing-out of the source association is evident for the 'Maximum' case in Fig.~\ref{fig:AD_Plots}, cosmic rays from sources like NGC~253 are largely deflected from the source position by the magnetic field structure with a mean deflection angle of $\sigma_{\rm NGC~253} = 83^{\circ}$. The cosmic rays in this case are heavily suppressed to a level of $\approx 5\%$ of the level that would arrive for the no magnetic field case. Likewise, in the case of Centaurus~A the final positions are spread out over a large region of the sky with a mean deflection angle of $\sigma_{\rm Cen~A} = 69^{\circ}$, making association with the source position challenging.
+Additionally, for the case of cosmic rays from NGC~253, an interesting difference between our toy model and the JF12 halo model is worth noting. For the JF12 halo model (see Appendix~\ref{Appendix_C}), the mean position of cosmic rays from NGC~253 is situated at roughly a latitude of $-33^{\circ}$ (also seen in \citet{Arjen_2021}). In contrast to this, in our 'Best-fit' toy model case this value is at approximately $-72^{\circ}$, which would be in better agreement with the Pierre Auger Observatory (PAO) observations~\citep{Auger_Starburst2018} if this southern Galactic hemisphere hotspot does indeed originate from NGC~253. This difference in the position of mean direction is again an effect of our toy model having weaker structured fields in comparison to turbulent fields (see Table ~\ref{Para_table}), since structured fields dictate the extent of the mean deflection angle from the source position. 
 
-The spread of the cosmic rays due to deflections by magnetic field obtained for
-the toy model were found to be considerably larger (5-10 times bigger) than those obtained for the JF12 toroidal halo. The primary driver of this difference is that our toy model possesses a larger level of turbulent magnetic fields than structured fields, which in turn results in a large degree of spreading of the arrival directions around the source position. 
+With regards the association of cosmic rays to their originating sources, it can be seen that in the 'Maximum' toy model magnetic field would make associating cosmic rays to their source extremely challenging at the energies considered, whereas the 'Best-fit' or 'Minimum' cases begin to make this mod. This is due to the fact that the structured fields are responsible for the overall direction of the particle deflections, whereas turbulent fields are responsible for spreading out the directions of the particle deflections around this overall deflected direction. For cases in which the turbulent magnetic field component dominates, and this field strength component is large, the source directions can be completely washed-out.
+This washing-out of the source association is evident for the 'Maximum' case in Fig.~\ref{fig:AD_Plots}, cosmic rays from sources like NGC~253 are largely deflected from the source position by the magnetic field structure with a mean deflection angle of $\sigma_{\rm NGC~253} = 83^{\circ}$. Likewise, in the case of Centaurus~A the final positions are spread out over a large region of the sky with a mean deflection angle of $\sigma_{\rm Cen~A} = 69^{\circ}$, making association with the source position challenging.
 
-Additional to the spreading effect, the mean direction of the deflected cosmic rays from the JF12 toroidal halo for NGC~253 (see Appendix~\ref{Appendix_C}) is situated at roughly a latitude of $-33^{\circ}$ (also seen in \citet{Arjen_2021}). Whereas, in our toy model case this value is at approximately $-72^{\circ}$, which is also in better agreement with the Pierre Auger Observatory (PAO) observations~\citep{Auger_Starburst2018}. This difference in the position of mean direction is again an effect of our toy model having weaker structured fields in comparison to turbulent fields (see Table ~\ref{Para_table}), since structured fields dictate the extent of the mean deflection angle from the source position. 
+
+
 
 From both the magnification and arrival direction maps in Fig.~\ref{fig:AD_Plots}, it is evident that the best-fit and lower extreme ('Minimum') parameters allow some degree of association of the deflected UHECRs with their original source position. However, in the upper extreme ('Maximum') parameters, such a connection between the point of origin of cosmic rays and their final positions is heavily erased. 
 
