--- a/references.bib
+++ b/references.bib
@@ -1007,3 +1007,16 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{1959ApJ...130..241W,
+       author = {{Westfold}, K.~C.},
+        title = "{The Polarization of Synchrotron Radiation.}",
+      journal = {\apj},
+         year = 1959,
+        month = jul,
+       volume = {130},
+        pages = {241},
+          doi = {10.1086/146713},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1959ApJ...130..241W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
