Changes made on April 25

--- a/references.bib
+++ b/references.bib
@@ -1012,7 +1012,7 @@ archivePrefix = {arXiv},
         title = "{The Polarization of Synchrotron Radiation.}",
       journal = {\apj},
          year = 1959,
-        month = jul,
+        month = {7}},
        volume = {130},
         pages = {241},
           doi = {10.1086/146713},
