--- a/main.tex
+++ b/main.tex
@@ -223,11 +223,12 @@ However, the range over which both $B_{\rm str}$ and $B_{\rm tur}$ are scanned i
 
 \begin{figure*}
 \centering
-\includegraphics[width =0.49\linewidth]{Images/Feb-13-2022_Planck_Sky_Map.png}%
 \includegraphics[width=0.49\linewidth]{Images/Feb-13-2022Ver1_Skymap_Bstr_3_Btur_6_Rmag_5_Zmag_7_norm_3.76e-13.png}
+\includegraphics[width =0.49\linewidth]{Images/Feb-13-2022_Planck_Sky_Map.png}%
+
 \includegraphics[width = 0.49\linewidth]{Images/Feb-13-2022_Residue_Bstr_3_Btur_6_Rmag_5_Zmag_7_norm_3.76e-13.png}%
 \includegraphics[width =0.49\linewidth]{Images/Feb-13-2022_Pol_Frac_30GHz_Total_Skymap_Bstr_3_Btur_6_Rmag_5_Zmag_7_norm_2.61e-14.png}
-\caption{\textbf{Top:} Planck polarised intensity (\textbf{left}) and simulated polarised intensity skymap (\textbf{right}) for the best-fit parameters (see Table~\ref{Para_table}). \textbf{Bottom:} Residual of the observation and the simulated data (\textbf{left}) and the polarisation fraction for the toy model (\textbf{right}).}
+\caption{\textbf{Top:} Simulated polarised intensity (\textbf{left}) and  Planck polarised intensity skymap (\textbf{right}) for the best-fit parameters (see Table~\ref{Para_table}). \textbf{Bottom:} Residual of the observation and the simulated data (\textbf{left}) and the polarisation fraction for the toy model (\textbf{right}).}
 \label{fig:Skymaps}
 \end{figure*}
 
@@ -336,7 +337,7 @@ In figure~\ref{fig:AD_Plots} we show:
     of cosmic rays from UHECRs candidate sources Cen~A and NGC~253. Similar to the above case of the magnification maps we backtrack cosmic rays starting from Earth until they reached an escape radius of 20~kpc from the Galactic centre. The cosmic ray arrival directions from a region of $5^{\circ}$ from the source are then binned.  Like the magnification maps, we normalise these maps to the peak value of the histogram densities in the source region for the case of no magnetic fields.  This gives a normalised value of the number of hits ('Magn.') obtained. Analogous to the magnification maps the \textbf{top}, \textbf{middle} and \textbf{bottom} plots denote the 'Best-fit', 'Minimum' and 'Maximum' cases, respectively. 
     \end{enumerate}
 
-The deflections of UHECR in the Galactic magnetic field are sensitive to both the structured and turbulent field components of the field in different ways. One of the first effects worth noting is the {\bf suppression effect} for cosmic rays from certain regions of the sky. For the 'Maximum' toy model magnetic field model giving rise to the largest suppression factor level in the magnification map in comparison to the 'Best-fit' and 'Minimum' cases (see Table~\ref{Para_table}). These suppression and enhancement of UHECRs from different regions of the sky are also seen in the skymaps provided for two potential UHECR sources, namely Cen~A (lon = $\rm -50.49^{\circ}$, lat = $\rm 19.42^{\circ}$) and NGC~253 (lon = $\rm 97.36^{\circ}$, lat = $\rm -87.96^{\circ}$). Because of their positions in the sky, both of these sources lie in the suppression region of the magnification maps for both the 'Best-fit' and 'Maximum' cases. In particular, we note that for NGC~253, the 'Maximum' toy model case leads to a suppression level of $\approx 5\%$ of the level that would arrive for the no magnetic field case, and $\approx 26\%$ for Cen~A.
+The deflections of UHECR in the Galactic magnetic field are sensitive to both the structured and turbulent field components of the field in different ways. One of the first effects worth noting is the {\bf suppression effect} for cosmic rays from certain regions of the sky. For the 'Maximum' case, toy model magnetic field model giving rise to the largest suppression factor level in the magnification map in comparison to the 'Best-fit' and 'Minimum' cases (see Table~\ref{Para_table}). These suppression and enhancement of UHECRs from different regions of the sky are also seen in the skymaps provided for two potential UHECR sources, namely Cen~A (lon = $\rm -50.49^{\circ}$, lat = $\rm 19.42^{\circ}$) and NGC~253 (lon = $\rm 97.36^{\circ}$, lat = $\rm -87.96^{\circ}$). Because of their positions in the sky, both of these sources lie in the suppression region of the magnification maps for both the 'Best-fit' and 'Maximum' cases. In particular, we note that for NGC~253, the 'Maximum' toy model case leads to a suppression level of $\approx 5\%$ of the level that would arrive for the no magnetic field case, and $\approx 26\%$ for Cen~A.
 
 A second effect introduced by the turbulent magnetic fields is the {\bf spreading effect} (mean deflection angle) of cosmic rays around their originating source direction. In order to quantify this effect, a list is provided below of the mean deflection angle, ($\sigma_{\rm source}$), between the mean direction and the arrival directions of the cosmic rays for the two candidate sources considered:
 \newline
@@ -441,5 +442,5 @@ We adopt a narrow range wavelength range for the turbulent fields $L_{\rm min}=2
 \end{equation}
 Usually (for typical values of the turbulence cascade index, $q$,
 considered) this integral is insensitive to $L_{\rm min}$ , being dominated by the longest mode values, so where one truncates the lower end of the integral has only a small effect.
-
+\Vasu{I want to discuss this}
 \end{document}
