--- a/references.bib
+++ b/references.bib
@@ -15,7 +15,23 @@ author = {Glennys R. Farrar},
 keywords = {UHECR, Galactic magnetic field, Magnetic deflections, RCUHE, Champs magnétique galactique, Déflexions magnétiques},
 abstract = {Our understanding of the Galactic magnetic field (GMF) has increased considerably in recent years, while at the same time remaining far from adequate. By way of illustration, the Jansson and Farrar (2012) (JF12) GMF model is described, emphasizing how it is constrained and which features are robust or likely to change, as modeling and constraining data improve. The most urgent requirements for the next phase of modeling are a more realistic model for the relativistic electron distribution (in order to reduce the systematic error associated with interpreting synchrotron data) and a better theoretical understanding of the origin of the large-scale coherent field (in order to develop a better phenomenological parameterization of the field). Even in its current stage of development, the JF12 model allows some important conclusions about UHECR deflections in the GMF to be formulated.}
 }
+%% Auger 2014
 
+@article{PierreAuger_2014,
+    author = "Aab, Alexander and others",
+    collaboration = "Pierre Auger",
+    title = "{Searches for Anisotropies in the Arrival Directions of the Highest Energy Cosmic Rays Detected by the Pierre Auger Observatory}",
+    eprint = "1411.6111",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "FERMILAB-PUB-14-487-AD-AE-CD-TD",
+    doi = "10.1088/0004-637X/804/1/15",
+    journal = "Astrophys. J.",
+    volume = "804",
+    number = "1",
+    pages = "15",
+    year = "2015"
+}
 %% Taylor_Matthews
 
 @article{Taylor_Matthews,
